Bug 131258 - FILEOPEN: DOCX: Incorrect table size
Summary: FILEOPEN: DOCX: Incorrect table size
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, filter:docx, regression
: 131259 131279 131285 (view as bug list)
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2020-03-10 16:13 UTC by Xisco Faulí
Modified: 2020-03-13 15:31 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Comparison MSO 2010 and LibreOffice 7.0 master (8.65 KB, image/png)
2020-03-10 16:13 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-03-10 16:13:11 UTC
Created attachment 158566 [details]
Comparison MSO 2010 and LibreOffice 7.0 master

Steps to reproduce:
1. Open attachment 86280 [details] from bug 69656

-> Table's size is incorrect. See comparison image

Reproduced in

Version: 7.0.0.0.alpha0+
Build ID: 976cabe84f3b6e5591ccf2b043d72cbca3e31ba0
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2020-03-10 16:14:28 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=4d5c0eaf3e0d3d3bcd9e691fffee19b75f3d6631

author	László Németh <nemeth@numbertext.org>	2020-02-17 14:34:11 +0100
committer	László Németh <nemeth@numbertext.org>	2020-02-19 16:46:18 +0100
commit 4d5c0eaf3e0d3d3bcd9e691fffee19b75f3d6631 (patch)
tree 6ed8e4a013884c28db01b9175dfc933141b7c395
parent faa2e7b7227b6b87379e7e136ea9ab63f37c3fc4 (diff)
tdf#118812 DOCX import: fix table style preference – part 2

Bisected with: bibisect-linux64-6.5

Adding Cc: to László Németh
Comment 2 Xisco Faulí 2020-03-10 20:36:04 UTC
attachment 118734 [details] from bug 94238 is also affected by this issue
Comment 3 Timur 2020-03-11 10:17:22 UTC
There's attachment 156700 [details] that Xisco uploaded in bug 128880 (where from?).
I also bibisected to 4d5c0eaf3e0d3d3bcd9e691fffee19b75f3d6631.
Comment 4 Xisco Faulí 2020-03-11 11:44:44 UTC
attachment 125030 [details] from bug 99822 is also affected. ( page 4 to 7 )
Comment 5 László Németh 2020-03-11 13:35:44 UTC
Note: It seems, this is result of changing to using the default overrideTableStyleFontSizeAndJustification=false value, so we must support this w:compat option.
Comment 6 László Németh 2020-03-11 18:39:56 UTC
Fix: https://gerrit.libreoffice.org/c/core/+/90347

(The problem was that an empty table is created only with extra endTable() calls, but the first call disposed the pending paragraphs for table style setting, i.e. table paragraphs hadn't got any table style.)
Comment 7 László Németh 2020-03-12 07:24:37 UTC
Fixed in master.

@Xisco: thanks for your bug report!
Comment 8 Commit Notification 2020-03-12 07:25:24 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/34f91740cde8e77bd429f468ce0d797d8b0c2af4

tdf#131258 DOCX: fix table styles in empty tables

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 László Németh 2020-03-12 07:56:35 UTC
*** Bug 131285 has been marked as a duplicate of this bug. ***
Comment 10 László Németh 2020-03-12 08:03:10 UTC
Note: Similar cell height issue of Bug 131279 has been resolved by the recent fix.
Comment 11 Xisco Faulí 2020-03-12 18:11:19 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 6aff77cb30e7c73109684a72ccddf7a28605afcb
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@László Németh, thanks for fixing this issue!!
Comment 12 Timur 2020-03-13 08:01:33 UTC Comment hidden (obsolete)
Comment 13 Xisco Faulí 2020-03-13 12:51:57 UTC
(In reply to Timur from comment #12)
> Xisco, please explain how you verify when last bibisect is
> a11c10a83f6fceae6cfb519725d06f8eaf1013fb 3 days ago?
> Do you (script?) install daily Linux or what? 
> Thanks to all.

local build...
Comment 14 Xisco Faulí 2020-03-13 15:27:19 UTC
*** Bug 131259 has been marked as a duplicate of this bug. ***
Comment 15 Xisco Faulí 2020-03-13 15:31:06 UTC
*** Bug 131279 has been marked as a duplicate of this bug. ***