tdf#131258 DOCX: fix table styles in empty tables

Pending paragraphs were disposed before table
processing, so empty tables have left out of the
rewritten table style preference handling,
resulting for example different cell heights.

Regression from commit 4d5c0eaf3e0d3d3bcd9e691fffee19b75f3d6631
(tdf#118812 DOCX import: fix table style preference – part 2).

Change-Id: I5d5d29f37c8198484e24519ced5a50458c923064
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/90347
Tested-by: Jenkins
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>